--- a/OutworldzFiles/Help/Maps.htm
+++ b/OutworldzFiles/Help/Maps.htm
@@ -63,14 +63,10 @@ p.MsoTitle, li.MsoTitle, div.MsoTitle
 	color:#5B9BD5;
 	text-transform:uppercase;
 	letter-spacing:.5pt;}
-p
-	{margin-right:0in;
-	margin-left:0in;
-	font-size:12.0pt;
-	font-family:"Times New Roman",serif;}
 span.Heading2Char
 	{mso-style-name:"Heading 2 Char";
 	mso-style-link:"Heading 2";
+	font-family:"Times New Roman",serif;
 	text-transform:uppercase;
 	letter-spacing:.75pt;
 	background:#DEEAF6;}
@@ -134,7 +130,7 @@ src="Maps_files/image001.png"></span></p>
 
 <p class=MsoNormal style='margin-top:12.0pt;margin-right:.5in;margin-bottom:
 6.0pt;margin-left:.5in;text-indent:-.25in;background:white'><span
-style='font-family:Symbol;color:black'>·<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+style='font-family:Symbol;color:black'>·<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 </span></span><b><span style='font-family:"Verdana",sans-serif;color:black'>None</span></b><span
 style='font-family:"Verdana",sans-serif;color:black'>:  No maps will be made.
 This is a good setting as the regions will boot very quickly.  Any existing
@@ -142,35 +138,35 @@ maps are not deleted.</span></p>
 
 <p class=MsoNormal style='margin-top:12.0pt;margin-right:.5in;margin-bottom:
 6.0pt;margin-left:.5in;text-indent:-.25in;background:white'><span
-style='font-family:Symbol;color:black'>·<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+style='font-family:Symbol;color:black'>·<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 </span></span><b><span style='font-family:"Verdana",sans-serif;color:black'>Simple
 but Fast</span></b><span style='font-family:"Verdana",sans-serif;color:black'>:
 MapImageModule is used with just Land showing</span></p>
 
 <p class=MsoNormal style='margin-top:12.0pt;margin-right:.5in;margin-bottom:
 6.0pt;margin-left:.5in;text-indent:-.25in;background:white'><span
-style='font-family:Symbol;color:black'>·<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+style='font-family:Symbol;color:black'>·<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 </span></span><b><span style='font-family:"Verdana",sans-serif;color:black'>Good</span></b><span
 style='font-family:"Verdana",sans-serif;color:black'>:  Uses Warp3D module with
 just Land showing</span></p>
 
 <p class=MsoNormal style='margin-top:12.0pt;margin-right:.5in;margin-bottom:
 6.0pt;margin-left:.5in;text-indent:-.25in;background:white'><span
-style='font-family:Symbol;color:black'>·<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+style='font-family:Symbol;color:black'>·<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 </span></span><b><span style='font-family:"Verdana",sans-serif;color:black'>Better</span></b><span
 style='font-family:"Verdana",sans-serif;color:black'>: Uses Warp3D module with
 Land, Prims, and land Textures showing</span></p>
 
 <p class=MsoNormal style='margin-top:12.0pt;margin-right:.5in;margin-bottom:
 6.0pt;margin-left:.5in;text-indent:-.25in;background:white'><span
-style='font-family:Symbol;color:black'>·<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+style='font-family:Symbol;color:black'>·<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 </span></span><b><span style='font-family:"Verdana",sans-serif;color:black'>Best</span></b><span
 style='font-family:"Verdana",sans-serif;color:black'>: Uses Warp3D module with
 Land, Prims, Mesh, Sculpts, and all Textures including prims showing.</span></p>
 
 <p class=MsoNormal style='margin-top:12.0pt;margin-right:.5in;margin-bottom:
 6.0pt;margin-left:.5in;text-indent:-.25in;background:white'><span
-style='font-family:Symbol;color:black'>·<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+style='font-family:Symbol;color:black'>·<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 </span></span><b><span style='font-family:"Arial Unicode MS",sans-serif;
 color:black'>Delete All Maps</span></b><span style='font-family:"Arial Unicode MS",sans-serif;
 color:black'>:  </span><span style='font-family:"Verdana",sans-serif;
@@ -180,7 +176,7 @@ and restarting all regions. </span></p>
 
 <p class=MsoNormal style='margin-top:12.0pt;margin-right:.5in;margin-bottom:
 6.0pt;margin-left:.5in;text-indent:-.25in;background:white'><span
-style='font-family:Symbol;color:black'>·<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+style='font-family:Symbol;color:black'>·<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 </span></span><b><span style='font-family:"Verdana",sans-serif;color:black'>View
 Map Web page: </span></b><span style='font-family:"Verdana",sans-serif;
 color:black'>Enabled if your system is booted.  Opens a web browser to </span><a
@@ -190,7 +186,7 @@ style='font-family:"Verdana",sans-serif;color:black'>.</span></p>
 
 <p class=MsoNormal style='margin-top:12.0pt;margin-right:.5in;margin-bottom:
 6.0pt;margin-left:.5in;text-indent:-.25in;background:white'><span
-style='font-family:Symbol;color:black'>·<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+style='font-family:Symbol;color:black'>·<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 </span></span><b><span style='font-family:"Verdana",sans-serif;color:black'>Small
 Metro Map and Large Metro Maps</span></b><span style='font-family:"Verdana",sans-serif;
 color:black'> Available only if your Apache/PHP is enabled in Settings Web
@@ -215,22 +211,28 @@ margin-left:.5in;margin-right:0in'>
 
 <p class=MsoNormal style='margin-top:12.0pt;margin-right:.5in;margin-bottom:
 6.0pt;margin-left:.5in;background:white'><span style='font-family:"Verdana",sans-serif;
-color:black'>Normally, one would generate map tiles at startup. You can also
+color:black'>Normally you would generate map tiles at startup. You can also
 manually force map tile regeneration with the console command '</span><span
 style='font-family:"Arial Unicode MS",sans-serif;color:black'>generate
 map&lt;enter&gt;'.</span></p>
 
-<p style='margin-left:.5in'>Stop the system, but do not exit. The first step after
-it has stopped is to go to Setup-&gt;Settings-&gt;Regions, where the Global
-Maps are set for all regions. </p>
-
-<p><img border=0 width=236 height=296 src="Maps_files/image003.png"></p>
-
-<p style='margin-left:.5in'>&nbsp;</p>
+<p class=MsoNormal style='margin-top:12.0pt;margin-right:.5in;margin-bottom:
+6.0pt;margin-left:.5in;background:white'><span style='font-family:"Verdana",sans-serif;
+color:black'>Stop the system, but do not exit. The first step after it has
+stopped is to go to Setup-&gt;Settings-&gt;Regions, where the Global Maps are
+set for all regions. </span></p>
 
 <p class=MsoNormal style='margin-top:12.0pt;margin-right:.5in;margin-bottom:
-6.0pt;margin-left:.5in;background:white'><span style='color:black'>There is a
-&quot;deregister all regions&quot; button.&nbsp; </span></p>
+6.0pt;margin-left:.5in;background:white'><span style='font-family:"Verdana",sans-serif;
+color:black'><img border=0 width=234 height=293 src="Maps_files/image003.png"></span></p>
+
+<p class=MsoNormal style='margin-top:12.0pt;margin-right:.5in;margin-bottom:
+6.0pt;margin-left:.5in;background:white'><span style='font-family:"Verdana",sans-serif;
+color:black'>&nbsp;</span></p>
+
+<p class=MsoNormal style='margin-top:12.0pt;margin-right:.5in;margin-bottom:
+6.0pt;margin-left:.5in;background:white'><span style='font-family:"Verdana",sans-serif;
+color:black'>There is a &quot;deregister all regions&quot; button.&nbsp; </span></p>
 
 <p class=MsoNormal style='margin-top:12.0pt;margin-right:.5in;margin-bottom:
 6.0pt;margin-left:.5in;background:white'><span style='font-family:"Verdana",sans-serif;
@@ -258,10 +260,13 @@ color:black'>Simplest way to fix this begins with stopping the system with the
 stop button.&nbsp; You need to do this first as we are going to clear out all
 regions, and let the system build it when it boots.</span></p>
 
-<p>&nbsp;</p>
+<p class=MsoNormal style='margin-top:12.0pt;margin-right:.5in;margin-bottom:
+6.0pt;margin-left:.5in;background:white'><span style='font-family:"Verdana",sans-serif;
+color:black'>&nbsp;</span></p>
 
-<p style='margin-left:.5in'><span style='font-size:10.0pt;font-family:"Arial Unicode MS",sans-serif;
-color:black'><img border=0 width=396 height=496 src="Maps_files/image004.png"></span></p>
+<p class=MsoNormal style='margin-top:12.0pt;margin-right:.5in;margin-bottom:
+6.0pt;margin-left:.5in;background:white'><span style='font-family:"Verdana",sans-serif;
+color:black'><img border=0 width=4 height=5 src="Maps_files/image004.png"></span></p>
 
 <p class=MsoNormal style='margin-top:12.0pt;margin-right:.5in;margin-bottom:
 6.0pt;margin-left:.5in;background:white'><span style='font-family:"Verdana",sans-serif;
@@ -279,7 +284,7 @@ color:black'>A) Go to Setup Settings-&gt;Maps and erase them all with
 
 <p class=MsoNormal style='margin-top:12.0pt;margin-right:.5in;margin-bottom:
 6.0pt;margin-left:.5in;background:white'><span style='font-family:"Verdana",sans-serif;
-color:black'><img border=0 width=420 height=393 src="Maps_files/image005.png"></span></p>
+color:black'><img border=0 width=4 height=4 src="Maps_files/image005.png"></span></p>
 
 <p class=MsoNormal style='margin-top:12.0pt;margin-right:.5in;margin-bottom:
 6.0pt;margin-left:.5in;background:white'><span style='font-family:"Verdana",sans-serif;
@@ -323,7 +328,7 @@ color:black'>Select Edit:</span></p>
 
 <p class=MsoNormal style='margin-top:12.0pt;margin-right:.5in;margin-bottom:
 6.0pt;margin-left:.5in;background:white'><span style='font-family:"Verdana",sans-serif;
-color:black'><img border=0 width=200 height=353 src="Maps_files/image006.png"></span></p>
+color:black'><img border=0 width=2 height=3 src="Maps_files/image006.png"></span></p>
 
 <p class=MsoNormal style='margin-top:12.0pt;margin-right:.5in;margin-bottom:
 6.0pt;margin-left:.5in;background:white'><span style='font-family:"Verdana",sans-serif;
