--- a/OutworldzFiles/Apache/htdocs/JOpensim/default.htm
+++ b/OutworldzFiles/Apache/htdocs/JOpensim/default.htm
@@ -2,12 +2,7 @@
 <head></head>
 <body>
 <!--#include virtual="/menu.html" -->
-
 <ol>
-	<li>See the Help file for JOpensim for installation Instructions</li>
-	
-	
+	<li>See the Help file for jOpensim for installation Instructions</li>
 </ol>
-
-
 </body>
