--- a/OutworldzFiles/Help/Revisions.htm
+++ b/OutworldzFiles/Help/Revisions.htm
@@ -3,7 +3,6 @@
 <head>
 <meta http-equiv=Content-Type content="text/html; charset=windows-1252">
 <meta name=Generator content="Microsoft Word 15 (filtered)">
-<title>Revisions</title>
 <style>
 <!--
  /* Font Definitions */
@@ -393,6 +392,51 @@ style='font-size:12.0pt;font-family:"Verdana",sans-serif'>&nbsp;</span></p>
 
 <p class=MsoNormal style='margin-top:5.0pt;margin-right:.5in;margin-bottom:
 0in;margin-left:.5in;line-height:normal;text-autospace:none'><span
+style='font-size:12.0pt;font-family:"Verdana",sans-serif'>&nbsp;</span></p>
+
+<p class=MsoNormal style='margin-top:5.0pt;margin-right:.5in;margin-bottom:
+0in;margin-left:.5in;line-height:normal;text-autospace:none'><span
+style='font-size:12.0pt;font-family:"Verdana",sans-serif'>V3.797</span></p>
+
+<p class=MsoNormal style='margin-top:5.0pt;margin-right:.5in;margin-bottom:
+0in;margin-left:.5in;line-height:normal;text-autospace:none'><span
+style='font-size:12.0pt;font-family:"Verdana",sans-serif'>Backup improvements
+in file handling by using a tmp folder</span></p>
+
+<p class=MsoNormal style='margin-top:5.0pt;margin-right:.5in;margin-bottom:
+0in;margin-left:.5in;line-height:normal;text-autospace:none'><span
+style='font-size:12.0pt;font-family:"Verdana",sans-serif'>&nbsp;</span></p>
+
+<p class=MsoNormal style='margin-top:5.0pt;margin-right:.5in;margin-bottom:
+0in;margin-left:.5in;line-height:normal;text-autospace:none'><span
+style='font-size:12.0pt;font-family:"Verdana",sans-serif'>V3.796</span></p>
+
+<p class=MsoNormal style='margin-top:5.0pt;margin-right:.5in;margin-bottom:
+0in;margin-left:.5in;line-height:normal;text-autospace:none'><span
+style='font-size:12.0pt;font-family:"Verdana",sans-serif'>Backup improvements
+in threading</span></p>
+
+<p class=MsoNormal style='margin-top:5.0pt;margin-right:.5in;margin-bottom:
+0in;margin-left:.5in;line-height:normal;text-autospace:none'><span
+style='font-size:12.0pt;font-family:"Verdana",sans-serif'>Log file improvements
+</span></p>
+
+<p class=MsoNormal style='margin-top:5.0pt;margin-right:.5in;margin-bottom:
+0in;margin-left:.5in;line-height:normal;text-autospace:none'><span
+style='font-size:12.0pt;font-family:"Verdana",sans-serif'>Some intermittent
+false crash alarms due to code order</span></p>
+
+<p class=MsoNormal style='margin-top:5.0pt;margin-right:.5in;margin-bottom:
+0in;margin-left:.5in;line-height:normal;text-autospace:none'><span
+style='font-size:12.0pt;font-family:"Verdana",sans-serif'>CPUCounter disabled
+for now - causing speed issues on slower machines.</span></p>
+
+<p class=MsoNormal style='margin-top:5.0pt;margin-right:.5in;margin-bottom:
+0in;margin-left:.5in;line-height:normal;text-autospace:none'><span
+style='font-size:12.0pt;font-family:"Verdana",sans-serif'>&nbsp;</span></p>
+
+<p class=MsoNormal style='margin-top:5.0pt;margin-right:.5in;margin-bottom:
+0in;margin-left:.5in;line-height:normal;text-autospace:none'><span
 style='font-size:12.0pt;font-family:"Verdana",sans-serif'>V3.795</span></p>
 
 <p class=MsoNormal style='margin-top:5.0pt;margin-right:.5in;margin-bottom:
@@ -408,7 +452,7 @@ setting for The Region list to keep it on top of everything</span></p>
 <p class=MsoNormal style='margin-top:5.0pt;margin-right:.5in;margin-bottom:
 0in;margin-left:.5in;line-height:normal;text-autospace:none'><span
 style='font-size:12.0pt;font-family:"Verdana",sans-serif'>Sorting of Region
-List bo.th directions by clicking the header.</span></p>
+List both directions by clicking the header.</span></p>
 
 <p class=MsoNormal style='margin-top:5.0pt;margin-right:.5in;margin-bottom:
 0in;margin-left:.5in;line-height:normal;text-autospace:none'><span
@@ -424,7 +468,8 @@ finished.</span></p>
 
 <p class=MsoNormal style='margin-top:5.0pt;margin-right:.5in;margin-bottom:
 0in;margin-left:.5in;line-height:normal;text-autospace:none'><span
-style='font-size:12.0pt;font-family:"Verdana",sans-serif'>Updater can be updated.</span></p>
+style='font-size:12.0pt;font-family:"Verdana",sans-serif'>Updater can be
+updated.</span></p>
 
 <p class=MsoNormal style='margin-top:5.0pt;margin-right:.5in;margin-bottom:
 0in;margin-left:.5in;line-height:normal;text-autospace:none'><span
@@ -686,8 +731,8 @@ Update</span></b></p>
 style='font-size:12.0pt;font-family:"Verdana",sans-serif'>This rev of DreamGrid
 supports Rev 0.3.2.0.  If you are running jOpensim at an earlier rev, you must
 update JOpensim in the Joomla/administrator menu. There are minor changes in
-new added features, but huge changes to the internal communication structure
-between OpenSimulator and Joomla.</span></p>
+new added features, but huge changes to the internal communication structure between
+OpenSimulator and Joomla.</span></p>
 
 <p class=MsoNormal style='margin-top:5.0pt;margin-right:.5in;margin-bottom:
 0in;margin-left:.5in;line-height:normal;text-autospace:none'><span
@@ -832,8 +877,8 @@ style='font-size:12.0pt;font-family:"Verdana",sans-serif'>V3.75 Updater Tweak </
 0in;margin-left:.5in;line-height:normal;text-autospace:none'><span
 style='font-size:12.0pt;font-family:"Verdana",sans-serif'>Removed deprecated
 Ionic.zip.dll. Older versions of DreamGrid were forced to use this DLL at an
-even old rev due to collisions in updater and older DreamGrids. Now it’s dead.
-Replaced by System.Compression.DotNetZip.</span></p>
+even old rev due to collisions in updater and older DreamGrids. Now it’s dead. Replaced
+by System.Compression.DotNetZip.</span></p>
 
 <p class=MsoNormal style='margin-top:5.0pt;margin-right:.5in;margin-bottom:
 0in;margin-left:.5in;line-height:normal;text-autospace:none'><span
@@ -1388,10 +1433,10 @@ style='font-size:12.0pt;font-family:"Verdana",sans-serif'>V3.63 Post Fixes</span
 
 <p class=MsoNormal style='margin-top:5.0pt;margin-right:.5in;margin-bottom:
 0in;margin-left:.5in;line-height:normal;text-autospace:none'><span
-style='font-size:12.0pt;font-family:"Verdana",sans-serif'>Opensim updated to #e9b4bca0899f13eab
-0.9.2.dev 2020-08-25. This fixes a glitch in EPP that showed a missing UUID. Also
-fixes a repeated debug log that occurs when the suitcase is on and a visitor
-arrives.</span></p>
+style='font-size:12.0pt;font-family:"Verdana",sans-serif'>Opensim updated to
+#e9b4bca0899f13eab 0.9.2.dev 2020-08-25. This fixes a glitch in EPP that showed
+a missing UUID. Also fixes a repeated debug log that occurs when the suitcase
+is on and a visitor arrives.</span></p>
 
 <p class=MsoNormal style='margin-top:5.0pt;margin-right:.5in;margin-bottom:
 0in;margin-left:.5in;line-height:normal;text-autospace:none'><span
@@ -1672,8 +1717,7 @@ style='font-size:12.0pt;font-family:"Verdana",sans-serif'>&nbsp;</span></p>
 
 <p class=MsoNormal style='margin-top:5.0pt;margin-right:.5in;margin-bottom:
 0in;margin-left:.5in;line-height:normal;text-autospace:none'><span
-style='font-size:12.0pt;font-family:"Verdana",sans-serif'>V3.57 Post Fixes
-7/6/2020</span></p>
+style='font-size:12.0pt;font-family:"Verdana",sans-serif'>V3.57 Post Fixes 7/6/2020</span></p>
 
 <p class=MsoNormal style='margin-top:5.0pt;margin-right:.5in;margin-bottom:
 0in;margin-left:.5in;line-height:normal;text-autospace:none'><span
@@ -4614,8 +4658,8 @@ that are not in the list 'dll.txt'.</span></p>
 
 <p class=MsoNormal style='margin-top:5.0pt;margin-right:.5in;margin-bottom:
 0in;margin-left:.5in;line-height:normal;text-autospace:none'><span
-style='font-size:12.0pt;font-family:"Verdana",sans-serif'>Installs for
-Microsoft C++ 1012 32/64 bit which are needed for Apache.</span></p>
+style='font-size:12.0pt;font-family:"Verdana",sans-serif'>Installs for Microsoft
+C++ 1012 32/64 bit which are needed for Apache.</span></p>
 
 <p class=MsoNormal style='margin-top:5.0pt;margin-right:.5in;margin-bottom:
 0in;margin-left:.5in;line-height:normal;text-autospace:none'><span
@@ -4812,8 +4856,9 @@ Parcels, Regions, and Hosts.</span></p>
 <p class=MsoNormal style='margin-top:5.0pt;margin-right:.5in;margin-bottom:
 0in;margin-left:.5in;line-height:normal;text-autospace:none'><span
 style='font-size:12.0pt;font-family:"Verdana",sans-serif'>Objects and regions
-marked as ‘Show in Search’ are Searchable in the Viewer (Ctrl-F in Firestorm). Requires
-Apache and PHP Switch to be enabled in Web Pages. Classifieds do not work yet.</span></p>
+marked as ‘Show in Search’ are Searchable in the Viewer (Ctrl-F in Firestorm).
+Requires Apache and PHP Switch to be enabled in Web Pages. Classifieds do not
+work yet.</span></p>
 
 <p class=MsoNormal style='margin-top:5.0pt;margin-right:.5in;margin-bottom:
 0in;margin-left:.5in;line-height:normal;text-autospace:none'><span
@@ -4947,8 +4992,8 @@ Help, now is a Settings Button for consistency.</span></p>
 
 <p class=MsoNormal style='margin-top:5.0pt;margin-right:.5in;margin-bottom:
 0in;margin-left:.5in;line-height:normal;text-autospace:none'><span
-style='font-size:12.0pt;font-family:"Verdana",sans-serif'>Baretail logging system
-with colorized text, live scrolling.</span></p>
+style='font-size:12.0pt;font-family:"Verdana",sans-serif'>Baretail logging
+system with colorized text, live scrolling.</span></p>
 
 <p class=MsoNormal style='margin-top:5.0pt;margin-right:.5in;margin-bottom:
 0in;margin-left:.5in;line-height:normal;text-autospace:none'><span
@@ -5100,8 +5145,8 @@ some of the overrides and global region settings. These can be sorted as well.</
 
 <p class=MsoNormal style='margin-top:5.0pt;margin-right:.5in;margin-bottom:
 0in;margin-left:.5in;line-height:normal;text-autospace:none'><span
-style='font-size:12.0pt;font-family:"Verdana",sans-serif'>Also, the Height and Width
-you last used are saved and restored.</span></p>
+style='font-size:12.0pt;font-family:"Verdana",sans-serif'>Also, the Height and
+Width you last used are saved and restored.</span></p>
 
 <p class=MsoNormal style='margin-top:5.0pt;margin-right:.5in;margin-bottom:
 0in;margin-left:.5in;line-height:normal;text-autospace:none'><span
@@ -5130,8 +5175,7 @@ allow LSL scripts. </span></p>
 <p class=MsoNormal style='margin-top:5.0pt;margin-right:.5in;margin-bottom:
 0in;margin-left:.5in;line-height:normal;text-autospace:none'><span
 style='font-size:12.0pt;font-family:"Verdana",sans-serif'>Allow LSL when
-checked, scripts lets you manually edit the Allowed IP Addresses in
-Opensim.proto</span></p>
+checked, scripts lets you manually edit the Allowed IP Addresses in Opensim.proto</span></p>
 
 <p class=MsoNormal style='margin-top:5.0pt;margin-right:.5in;margin-bottom:
 0in;margin-left:.5in;line-height:normal;text-autospace:none'><span
@@ -5750,7 +5794,8 @@ style='font-size:12.0pt;font-family:"Verdana",sans-serif'>V2.52 </span></p>
 <p class=MsoNormal style='margin-top:5.0pt;margin-right:.5in;margin-bottom:
 0in;margin-left:.5in;line-height:normal;text-autospace:none'><span
 style='font-size:12.0pt;font-family:"Verdana",sans-serif'>Click Ctrl R or
-Settings-&gt;Region brings the regions panel to the front unless it is minimized.</span></p>
+Settings-&gt;Region brings the regions panel to the front unless it is
+minimized.</span></p>
 
 <p class=MsoNormal style='margin-top:5.0pt;margin-right:.5in;margin-bottom:
 0in;margin-left:.5in;line-height:normal;text-autospace:none'><span
@@ -6196,8 +6241,8 @@ style='font-size:12.0pt;font-family:"Verdana",sans-serif'>&nbsp;</span></p>
 
 <p class=MsoNormal style='margin-top:5.0pt;margin-right:.5in;margin-bottom:
 0in;margin-left:.5in;line-height:normal;text-autospace:none'><span
-style='font-size:12.0pt;font-family:"Verdana",sans-serif'>Added a blank database
-for restart from Zero</span></p>
+style='font-size:12.0pt;font-family:"Verdana",sans-serif'>Added a blank
+database for restart from Zero</span></p>
 
 <p class=MsoNormal style='margin-top:5.0pt;margin-right:.5in;margin-bottom:
 0in;margin-left:.5in;line-height:normal;text-autospace:none'><span
