STartup Help add images for Dot Net

--- a/OutworldzFiles/Help/Startup.htm
+++ b/OutworldzFiles/Help/Startup.htm
@@ -100,7 +100,7 @@ span.HTMLPreformattedChar
  /* Page Definitions */
  @page WordSection1
 	{size:8.5in 11.0in;
-	margin:1.0in 1.0in 1.0in 1.0in;}
+	margin:.5in .5in .5in .5in;}
 div.WordSection1
 	{page:WordSection1;}
 -->
@@ -112,65 +112,71 @@ div.WordSection1
 
 <div class=WordSection1>
 
-<p class=MsoNormal>&nbsp;</p>
-
 <div style='border:solid #5B9BD5 3.0pt;padding:0in 0in 0in 0in;background:#5B9BD5'>
 
-<h1><a name="_Toc58323640">Startup - Starting up the System the First Time</a></h1>
+<h1><a name="_Hlk58323613"></a><a name="_Toc58320202">Startup - Starting up the
+System the First Time</a></h1>
 
 </div>
 
-<p class=MsoNormal>You can install DreamGrid by  saving ”InstallDreamGrid.exe”
-in an empty folder and running it. Or you can install DreamGrid by unzipping
-the zip file into a new, blank folder</p>
+<p class=MsoNormal>You can install DreamGrid by downloading and saving InstallDreamGrid.exe
+in an empty folder and running it.</p>
 
-<p class=MsoNormal>Then locate and click “Start.exe”.  You may get a popup
+<p class=MsoNormal>Or you can install DreamGrid by unzipping the zip file into
+a new, blank folder.</p>
+
+<p class=MsoNormal>Then locate and click “Start.exe”.  You may get a security
 warning. All my binary code is digitally signed and is cryptographically
 verified to protect you and to assure you that the code you get is what is
 originally authored.  It is virus-free and has no ads. It should say
 &quot;Verified Publisher: Outworldz, LLC”.  </p>
 
-<p class=MsoNormal>Click [Start] in the top left of the menu:</p>
+<p class=MsoNormal>It may also prompt you to install necessary Microsoft DLL’s.
+</p>
 
-<p class=MsoNormal><img width=351 height=207 id="Picture 2146235408"
-src="Startup_files/image001.png"></p>
-
-<p class=MsoNormal>This box will appear for you to claim ownership of the
-Grid.  </p>
-
-<p class=MsoNormal><img width=238 height=168 id="Picture 2146235406"
-src="Startup_files/image002.jpg"><br>
-<br>
-Use a unique, new long password as this is the avatar that owns the grid.</p>
-
-<p class=MsoNormal>Another DOS box will appear. This will be your first region.
-The region will become &quot;Welcome&quot;.&nbsp;&nbsp;You can change this name
-later.  The system will ask you for an estate name.&nbsp; You can just press
-enter to name it “My Estate”, or type in a new name. </p>
-
-<p class=MsoNormal><img width=572 height=299 id="Picture 2146235392"
-src="Startup_files/image003.jpg" alt=Image></p>
-
-<p class=MsoNormal>It will then ask you for the owner’s name of this
-region.&nbsp;&nbsp; Use the same name that you first entered.</p>
-
-<p class=MsoNormal><img width=582 height=304 id="Picture 20"
-src="Startup_files/image004.jpg" alt=Image></p>
+<p class=MsoNormal>Om Server products, you will need to install Microsoft Dot Net
+3.5 in “Server Manager”. click Next.. Next… until you see this screen. Select
+Dot Net 3.5 and select Install.<br>
+<img width=720 height=516 src="Startup_files/image001.png"></p>
 
 <p class=MsoNormal>&nbsp;</p>
-
-<p class=MsoNormal>The system will eventually&nbsp;tell you
-&quot;INITIALIZATION COMPLETE FOR Welcome - LOGINS ENABLED&quot;</p>
 
 <span style='font-size:10.0pt;line-height:115%;font-family:"Calibri",sans-serif'><br
 clear=all style='page-break-before:always'>
 </span>
 
-<p class=MsoNormal>&nbsp;</p>
+<p class=MsoNormal>Click [Start] in the top left of the menu:</p>
+
+<p class=MsoNormal><img width=306 height=234 src="Startup_files/image002.png"></p>
+
+<p class=MsoNormal>This box will appear for you to claim ownership of the
+Grid.  </p>
+
+<p class=MsoNormal><img width=268 height=190 id="Picture 7"
+src="Startup_files/image003.jpg"><br>
+<br>
+Use a unique, new long password as this is the avatar that owns the grid.</p>
+
+<p class=MsoNormal>Another DOS box will appear. This will be your first region.
+The region is named &quot;Welcome&quot;.&nbsp;&nbsp;You can change this name
+later.  The system will ask you for an estate name.&nbsp; You can just press
+enter to name it “My Estate”, or type in a new name. </p>
+
+<p class=MsoNormal><img width=568 height=297 id=image153.png
+src="Startup_files/image004.jpg" alt=Image></p>
+
+<p class=MsoNormal>It will then ask you for the owner’s name of this
+region.&nbsp;&nbsp; <b><u>Use the same name that you first entered.</u></b></p>
+
+<p class=MsoNormal><img width=578 height=302 id=image171.png
+src="Startup_files/image005.jpg" alt=Image></p>
+
+<p class=MsoNormal>The system will eventually&nbsp;tell you
+&quot;INITIALIZATION COMPLETE FOR Welcome - LOGINS ENABLED&quot;</p>
 
 <div style='border:solid #DEEAF6 3.0pt;padding:0in 0in 0in 0in;background:#DEEAF6'>
 
-<h2><a name="_Toc58323641"><span style='color:black'>Setup Your Viewer:</span></a></h2>
+<h2><span style='color:black'>Setup Your Viewer:</span></h2>
 
 </div>
 
@@ -182,8 +188,8 @@ local area network at this time. The Hypergrid will not be available until you
 set up the router.  See the help section at the bottom of this article on Ports
 and Loopback.</p>
 
-<p class=MsoNormal><img width=624 height=253 id="Picture 19"
-src="Startup_files/image005.png"></p>
+<p class=MsoNormal><img width=623 height=252 id="Picture 12"
+src="Startup_files/image006.png"></p>
 
 <p class=MsoNormal>&nbsp;</p>
 
@@ -196,42 +202,28 @@ text-decoration:none'>https://www.firestormviewer.org/</span></a></p>
 <p class=MsoNormal>Launch the viewer and go to the Viewer Preferences menu
 (Ctrl-P).</p>
 
-<p class=MsoNormal><img border=0 width=165 height=108 id="Picture 18"
-src="Startup_files/image006.png" alt=Image></p>
-
-<span style='font-size:10.0pt;line-height:115%;font-family:"Calibri",sans-serif'><br
-clear=all style='page-break-before:always'>
-</span>
-
-<p class=MsoNormal>&nbsp;</p>
+<p class=MsoNormal><img border=0 width=164 height=107 id=image162.png
+src="Startup_files/image007.png" alt=Image></p>
 
 <p class=MsoNormal>Go to the Opensim Grid manager screen:</p>
 
-<p class=MsoNormal><img border=0 width=499 height=375 id="Picture 2"
-src="Startup_files/image007.jpg" alt=Image></p>
+<p class=MsoNormal><img border=0 width=433 height=325 id=image164.png
+src="Startup_files/image008.jpg" alt=Image></p>
 
 <p class=MsoNormal>Add the IP address to the Firestorm or other viewers
 &quot;Add new Grid&quot; field and click &quot;Apply&quot;.</p>
 
 <p class=MsoNormal>You should now be able to select your new DreamGrid in the
-pulldown login screen  and log in with the same First and Last Name and
-password you originally entered. You should then appear in an empty sim on a
-small round island.</p>
+pulldown login screen and log in with the same First and Last Name and password
+you originally entered. You should then appear in an empty sim on a small round
+island.</p>
 
 <p class=MsoNormal>If this does not work, please use the troubleshooting link
 at the bottom of this help file.</p>
 
-<span style='font-size:10.0pt;line-height:115%;font-family:"Calibri",sans-serif'><br
-clear=all style='page-break-before:always'>
-</span>
-
-<p class=MsoNormal>&nbsp;</p>
-
-<p class=MsoNormal>&nbsp;</p>
-
 <div style='border:solid #DEEAF6 3.0pt;padding:0in 0in 0in 0in;background:#DEEAF6'>
 
-<h2><a name="_Toc58323642"><span style='color:black'>Running the Grid manually</span></a><span
+<h2><a name="_Toc58320203"><span style='color:black'>Running the Grid manually</span></a><span
 style='color:black'> </span></h2>
 
 </div>
@@ -241,8 +233,8 @@ After the first run, you do not need DreamGrid at all.  The batch file <b>Go.bat
 starts a command prompt with an instance of Opensim in it (an instance is a set
 of sims). The batch file launches Opensim with the settings it needs for the
 INI files and the Log file.</span><br>
-See Outworldzfiles\mysql\bin\StartManually.bat  which will start MySQL.  Also,
-a StopMysql.bat is in there.  It is a clever idea to run (as an Administrator)
+See Outworldzfiles\mysql\bin\StartManually.bat which will start MySQL.  Also, a
+StopMysql.bat is in there.  It is a clever idea to run (as an Administrator)
 InstallAsAService.bat so you do not need to start/stop MySQL.</p>
 
 <div style='border:solid #888888 1.0pt;padding:2.0pt 2.0pt 2.0pt 2.0pt;
@@ -251,7 +243,7 @@ style='color:#660066'>InstallAsAService</span><span style='color:#666600'>.</spa
 style='color:black'>bat</span></pre></div>
 
 <p class=MsoNormal><span style='color:black'>&nbsp;</span>See
-Outworldzfiles\Opensim\RunRobust.bat which starts Robust</p>
+Outworldzfiles\Opensim\RunRobust.bat which starts Robust.</p>
 
 <div style='border:solid #888888 1.0pt;padding:2.0pt 2.0pt 2.0pt 2.0pt;
 margin-left:.25in;margin-right:0in'><pre style='border:none;padding:0in'><span
@@ -282,32 +274,6 @@ style='color:#666600'> <br>
 </span><span style='color:#000088'>add</span><span style='color:black'> more region names here</span></pre></div>
 
 <p class=MsoNormal>&nbsp;</p>
-
-<span style='font-size:10.0pt;line-height:115%;font-family:"Calibri",sans-serif'><br
-clear=all style='page-break-before:always'>
-</span>
-
-<p class=MsoNormal style='text-align:justify;text-justify:inter-ideograph'>&nbsp;</p>
-
-<p class=MsoNormal>&nbsp;</p>
-
-<div style='border:solid #5B9BD5 3.0pt;padding:0in 0in 0in 0in;background:#5B9BD5'>
-
-<h1><a name="_Toc58323643">Settings</a></h1>
-
-</div>
-
-<p class=MsoNormal>You can make changes to DreamGrid in the Ctrl-S (Settings)
-menu.<br>
-<br>
-<img border=0 width=470 height=304 id="Picture 17"
-src="Startup_files/image008.png"></p>
-
-<p class=MsoNormal><img border=0 width=278 height=333 id="Picture 2146235410"
-src="Startup_files/image009.jpg"> </p>
-
-<p class=MsoNormal>Each section of this manual is in Alphabetical order
-according to the above menu.</p>
 
 </div>
 
